--- a/src/main/resources/assets/cspirit/lang/ru_ru.json
+++ b/src/main/resources/assets/cspirit/lang/ru_ru.json
@@ -195,36 +195,34 @@
   "entity.cspirit.christmas_tree" : "Рождественская елка",
   "entity.cspirit.reindeer" : "Олень",
 
-  "hunger.icon.1"  : "②",
-  "hunger.icon.2"  : "①",
-  "hunger.icon.3"  : "①②",
-  "hunger.icon.4"  : "①①",
-  "hunger.icon.5"  : "①①②",
-  "hunger.icon.6"  : "①①①",
-  "hunger.icon.7"  : "①①①②",
-  "hunger.icon.8"  : "①①①①",
-  "hunger.icon.9"  : "①①①①②",
-  "hunger.icon.10" : "①①①①①",
-  "hunger.icon.11" : "①①①①①②",
-  "hunger.icon.12" : "①①①①①①",
-
-  "saturation.icon.0.1"  : "④",
-  "saturation.icon.0.2"  : "③",
-  "saturation.icon.0.3"  : "③④",
-  "saturation.icon.0.4"  : "③③",
-  "saturation.icon.0.5"  : "③③④",
-  "saturation.icon.0.6"  : "③③③",
-  "saturation.icon.0.7"  : "③③③④",
-  "saturation.icon.0.8"  : "③③③③",
-  "saturation.icon.0.9"  : "③③③③④",
-  "saturation.icon.1.0" : "③③③③③",
-  "saturation.icon.1.1" : "③③③③③④",
-  "saturation.icon.1.2" : "③③③③③③",
-
-  "santa.icon.1" : "⑤ x1",
-  "santa.icon.2" : "⑤ x2",
-  "santa.icon.3" : "⑤ x3",
-  "santa.icon.4" : "⑤ x4",
-  "santa.icon.5" : "⑤ x5",
-  "grinch.icon" : "⑥ Непослушные Предметы"
+  "hunger.icon.1": "\u2461",
+  "hunger.icon.2": "\u2460",
+  "hunger.icon.3": "\u2460\u2461",
+  "hunger.icon.4": "\u2460\u2460",
+  "hunger.icon.5": "\u2460\u2460\u2461",
+  "hunger.icon.6": "\u2460\u2460\u2460",
+  "hunger.icon.7": "\u2460\u2460\u2460\u2461",
+  "hunger.icon.8": "\u2460\u2460\u2460\u2460",
+  "hunger.icon.9": "\u2460\u2460\u2460\u2460\u2461",
+  "hunger.icon.10": "\u2460\u2460\u2460\u2460\u2460",
+  "hunger.icon.11": "\u2460\u2460\u2460\u2460\u2460\u2461",
+  "hunger.icon.12": "\u2460\u2460\u2460\u2460\u2460\u2460",
+  "saturation.icon.0.1": "\u2463",
+  "saturation.icon.0.2": "\u2462",
+  "saturation.icon.0.3": "\u2462\u2463",
+  "saturation.icon.0.4": "\u2462\u2462",
+  "saturation.icon.0.5": "\u2462\u2462\u2463",
+  "saturation.icon.0.6": "\u2462\u2462\u2462",
+  "saturation.icon.0.7": "\u2462\u2462\u2462\u2463",
+  "saturation.icon.0.8": "\u2462\u2462\u2462\u2462",
+  "saturation.icon.0.9": "\u2462\u2462\u2462\u2462\u2463",
+  "saturation.icon.1.0": "\u2462\u2462\u2462\u2462\u2462",
+  "saturation.icon.1.1": "\u2462\u2462\u2462\u2462\u2462\u2463",
+  "saturation.icon.1.2": "\u2462\u2462\u2462\u2462\u2462\u2462",
+  "santa.icon.1": "\u2464 x1",
+  "santa.icon.2": "\u2464 x2",
+  "santa.icon.3": "\u2464 x3",
+  "santa.icon.4": "\u2464 x4",
+  "santa.icon.5": "\u2464 x5",
+  "grinch.icon": "\u2465 Naughty Item"
 }
